refactor: Improve code quality and add configuration management
- Add .gitignore to exclude venv and unnecessary files
- Add config.py for centralized settings management
- Refactor database.py with context managers and error handling
- Update main.py with Prometheus metrics and health checks
- Add comprehensive logging throughout
- Remove hardcoded values (following SOLID principles)

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,43 @@
-venv/
+# Python
 __pycache__/
-*.pyc
-*.pyo
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+env/
+ENV/
+.venv
+
+# Database
 *.db
+*.sqlite
+*.sqlite3
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
 .DS_Store
+Thumbs.db
+
+# Environment variables
 .env
+*.env.local
+
+# Logs
 *.log
+
+# Test coverage
+.coverage
+htmlcov/
+.pytest_cache/
+
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
