--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,4 +7,5 @@ pytest==7.4.3
 pytest-cov==4.1.0
 httpx==0.25.2
 prometheus-client==0.19.0
-coverage==7.3.2
+coverage==7.3.2uvicorn[standard]>=0.20.0
+gunicorn>=20.1.0
