--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,10 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-pydantic-settings==2.1.0
-python-dotenv==1.0.0
-pytest==7.4.3
-pytest-cov==4.1.0
-httpx==0.25.2
-prometheus-client==0.19.0
-coverage==7.3.2uvicorn[standard]>=0.20.0
+fastapi>=0.104.0
+uvicorn[standard]>=0.20.0
 gunicorn>=20.1.0
+pydantic>=2.0.0
+pytest>=7.4.0
+pytest-cov>=4.1.0
+coverage>=7.3.0
+flake8>=6.1.0
+black>=23.10.0
+prometheus-client>=0.18.0
