--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ fastapi>=0.104.0
 uvicorn[standard]>=0.20.0
 gunicorn>=20.1.0
 pydantic>=2.0.0
+pydantic-settings>=2.0.0
 pytest>=7.4.0
 pytest-cov>=4.1.0
 coverage>=7.3.0
