--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -59,7 +59,7 @@ jobs:
             backend/htmlcov/
 
   # ============================================================================
-  # Job 2: Lint (Optional but recommended)
+  # Job 2: Lint
   # ============================================================================
   lint:
     name: Code Linting
@@ -90,165 +90,65 @@ jobs:
         continue-on-error: true
 
   # ============================================================================
-  # Job 3: Build and Push to Azure Container Registry
-  # ============================================================================
-  build:
-    name: Build Docker Image
-    runs-on: ubuntu-latest
-    needs: [test, lint]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Azure Login
-        uses: azure/login@v1
-        with:
-          creds: |
-            {
-              "clientId": "${{ secrets.AZURE_CLIENT_ID }}",
-              "clientSecret": "${{ secrets.AZURE_CLIENT_SECRET }}",
-              "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}",
-              "tenantId": "${{ secrets.AZURE_TENANT_ID }}"
-            }
-
-      - name: Set ACR name
-        id: acr-name
-        run: |
-          # Remove hyphens from webapp name for ACR (ACR names cannot contain hyphens)
-          ACR_NAME=$(echo "${{ secrets.AZURE_WEBAPP_NAME }}" | tr -d '-')acr
-          echo "acr_name=${ACR_NAME}" >> $GITHUB_OUTPUT
-          echo "ACR Name: ${ACR_NAME}"
-
-      - name: Create Resource Group
-        run: |
-          az group create --name todolist-rg --location eastus || echo "Resource group already exists"
-
-      - name: Create Azure Container Registry with Admin Enabled
-        run: |
-          az acr create \
-            --resource-group todolist-rg \
-            --name ${{ steps.acr-name.outputs.acr_name }} \
-            --sku Basic \
-            --admin-enabled true || echo "ACR already exists"
-
-      - name: Build and Push using ACR Build Task
-        run: |
-          # Use ACR build task - this builds in Azure without needing local Docker or credentials
-          az acr build \
-            --registry ${{ steps.acr-name.outputs.acr_name }} \
-            --resource-group todolist-rg \
-            --image todolist-app:${{ github.sha }} \
-            --image todolist-app:latest \
-            --file Dockerfile \
-            .
-
-      - name: Build success
-        run: |
-          echo "✅ Docker image built and pushed successfully!"
-          echo "Registry: ${{ steps.acr-name.outputs.acr_name }}.azurecr.io"
-          echo "Image: todolist-app:${{ github.sha }}"
-
-  # ============================================================================
-  # Job 4: Deploy to Azure Web App
+  # Job 3: Deploy to Azure Web App
   # ============================================================================
   deploy:
     name: Deploy to Azure
     runs-on: ubuntu-latest
-    needs: build
+    needs: [test, lint]
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    environment: production
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Azure Login
-        uses: azure/login@v1
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          creds: |
-            {
-              "clientId": "${{ secrets.AZURE_CLIENT_ID }}",
-              "clientSecret": "${{ secrets.AZURE_CLIENT_SECRET }}",
-              "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}",
-              "tenantId": "${{ secrets.AZURE_TENANT_ID }}"
-            }
+          python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: Set ACR name
-        id: acr-name
+      - name: Create deployment package with correct structure
         run: |
-          ACR_NAME=$(echo "${{ secrets.AZURE_WEBAPP_NAME }}" | tr -d '-')acr
-          echo "acr_name=${ACR_NAME}" >> $GITHUB_OUTPUT
-          echo "login_server=${ACR_NAME}.azurecr.io" >> $GITHUB_OUTPUT
-
-      - name: Create App Service Plan
-        run: |
-          az appservice plan create \
-            --name todolist-plan \
-            --resource-group todolist-rg \
-            --is-linux \
-            --sku B1 || echo "App Service Plan already exists"
-
-      - name: Create Web App with ACR Integration
-        run: |
-          # Create web app with ACR image
-          az webapp create \
-            --resource-group todolist-rg \
-            --plan todolist-plan \
-            --name ${{ secrets.AZURE_WEBAPP_NAME }} \
-            --deployment-container-image-name ${{ steps.acr-name.outputs.login_server }}/todolist-app:latest || echo "Web App already exists"
+          # Create a clean deployment directory
+          mkdir -p deploy
           
-          # Assign managed identity to web app
-          az webapp identity assign \
-            --name ${{ secrets.AZURE_WEBAPP_NAME }} \
-            --resource-group todolist-rg || echo "Identity already assigned"
-
-      - name: Configure Web App to use ACR
-        run: |
-          # Enable ACR pull using managed identity or admin credentials
-          az webapp config container set \
-            --name ${{ secrets.AZURE_WEBAPP_NAME }} \
-            --resource-group todolist-rg \
-            --docker-custom-image-name ${{ steps.acr-name.outputs.login_server }}/todolist-app:latest \
-            --docker-registry-server-url https://${{ steps.acr-name.outputs.login_server }}
+          # Copy backend files to root of deploy (Azure expects app at root)
+          cp -r backend/* deploy/
           
-          # Use ACR admin credentials (already enabled during creation)
-          az webapp config appsettings set \
-            --name ${{ secrets.AZURE_WEBAPP_NAME }} \
-            --resource-group todolist-rg \
-            --settings WEBSITES_PORT=8000 \
-                      DOCKER_ENABLE_CI=true
-
-      - name: Enable ACR admin and configure web app
-        run: |
-          # Ensure admin is enabled
-          az acr update --name ${{ steps.acr-name.outputs.acr_name }} --admin-enabled true
+          # Copy frontend folder
+          cp -r frontend deploy/
           
-          # Get admin credentials and configure web app
-          ACR_USERNAME=$(az acr credential show --name ${{ steps.acr-name.outputs.acr_name }} --query username -o tsv 2>/dev/null || echo "admin")
-          ACR_PASSWORD=$(az acr credential show --name ${{ steps.acr-name.outputs.acr_name }} --query passwords[0].value -o tsv 2>/dev/null || echo "")
-          
-          if [ -n "$ACR_PASSWORD" ]; then
-            echo "Configuring web app with ACR credentials..."
-            az webapp config container set \
-              --name ${{ secrets.AZURE_WEBAPP_NAME }} \
-              --resource-group todolist-rg \
-              --docker-custom-image-name ${{ steps.acr-name.outputs.login_server }}/todolist-app:latest \
-              --docker-registry-server-url https://${{ steps.acr-name.outputs.login_server }} \
-              --docker-registry-server-user "$ACR_USERNAME" \
-              --docker-registry-server-password "$ACR_PASSWORD"
-          else
-            echo "Using system-assigned managed identity for ACR access"
+          # Ensure requirements.txt is at root
+          if [ -f backend/requirements.txt ]; then
+            cp backend/requirements.txt deploy/requirements.txt
           fi
+          
+          # Ensure gunicorn is in requirements
+          if ! grep -q "gunicorn" deploy/requirements.txt; then
+            echo "gunicorn>=20.1.0" >> deploy/requirements.txt
+          fi
+          
+          # Create startup script
+          cat > deploy/startup.sh << 'EOF'
+          #!/bin/bash
+          cd /home/site/wwwroot
+          gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app --bind 0.0.0.0:8000 --timeout 600
+          EOF
+          
+          chmod +x deploy/startup.sh
+          
+          # Create zip from deploy directory
+          cd deploy
+          zip -r ../deploy.zip .
+          cd ..
 
-      - name: Restart Web App
-        run: |
-          az webapp restart \
-            --name ${{ secrets.AZURE_WEBAPP_NAME }} \
-            --resource-group todolist-rg
-
-      - name: Azure logout
-        run: az logout
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: deploy.zip
 
       - name: Deployment success notification
         if: success()
@@ -263,14 +163,10 @@ jobs:
           echo "📊 Health Check:"
           echo "   https://${{ secrets.AZURE_WEBAPP_NAME }}.azurewebsites.net/health"
           echo ""
-          echo "📈 Metrics:"
-          echo "   https://${{ secrets.AZURE_WEBAPP_NAME }}.azurewebsites.net/metrics"
-          echo ""
           echo "📚 API Documentation:"
           echo "   https://${{ secrets.AZURE_WEBAPP_NAME }}.azurewebsites.net/docs"
           echo ""
-          echo "Note: It may take 2-3 minutes for the container to fully start."
-          echo ""
+          echo "⏰ Note: Container may take 1-2 minutes to fully start"
           echo "═══════════════════════════════════════════════════════"
 
       - name: Deployment failure notification
