--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,12 @@
-fastapi>=0.104.0
-uvicorn[standard]>=0.20.0
-gunicorn>=20.1.0
-pydantic>=2.0.0
-pydantic-settings>=2.0.0
-pytest>=7.4.0
-pytest-cov>=4.1.0
-coverage>=7.3.0
-flake8>=6.1.0
-black>=23.10.0
-prometheus-client>=0.18.0
-httpx>=0.24.0
+fastapi==0.109.0
+uvicorn==0.24.0.post1
+pydantic==1.10.13
+pydantic-core==2.14.6
+python-dotenv==1.0.0
+sqlalchemy==2.0.23
+alembic==1.13.1
+pytest==7.4.4
+pytest-cov==4.1.0
+coverage==7.3.2
+httpx==0.24.1
+requests==2.31.0
