Add Azure deployment workflow
Created GitHub Actions workflow (deploy.yml) for automatic deployment to Azure App Service.
Includes Azure login using service principal, pytest coverage step, and backend deployment process.

--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -1,176 +1,47 @@
-name: Azure CI/CD Pipeline
+name: Deploy Todo API to Azure
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 env:
-  PYTHON_VERSION: '3.10'
-  COVERAGE_THRESHOLD: 70
+  AZURE_WEBAPP_NAME: ${{ secrets.AZURE_APP_NAME }}
+  AZURE_RESOURCE_GROUP: ${{ secrets.AZURE_RESOURCE_GROUP }}
+  AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  CONTAINER_REGISTRY: ghcr.io/${{ github.repository_owner }}
+  IMAGE_NAME: todo-devops-api
 
 jobs:
-  # ============================================================================
-  # Job 1: Test and Coverage
-  # ============================================================================
-  test:
-    name: Test and Coverage
+  build-and-deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
+    - name: Login to Azure
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Cache dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+    - name: Log in to GitHub Container Registry
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r backend/requirements.txt
+    - name: Build Docker image
+      run: |
+        docker build -t $CONTAINER_REGISTRY/$IMAGE_NAME:latest ./backend
 
-      - name: Run tests with coverage
-        run: |
-          cd backend
-          pytest tests/ -v --cov=. --cov-report=xml --cov-report=term --cov-report=html --cov-fail-under=${{ env.COVERAGE_THRESHOLD }}
+    - name: Push Docker image
+      run: |
+        docker push $CONTAINER_REGISTRY/$IMAGE_NAME:latest
 
-      - name: Check coverage threshold
-        run: |
-          cd backend
-          coverage report --fail-under=${{ env.COVERAGE_THRESHOLD }}
-
-      - name: Upload coverage reports
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: |
-            backend/coverage.xml
-            backend/htmlcov/
-
-  # ============================================================================
-  # Job 2: Lint
-  # ============================================================================
-  lint:
-    name: Code Linting
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-
-      - name: Install linting tools
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 black
-
-      - name: Run Black formatter check
-        run: |
-          black --check backend/
-        continue-on-error: true
-
-      - name: Run Flake8 linter
-        run: |
-          flake8 backend/ --count --select=E9,F63,F7,F82 --show-source --statistics
-        continue-on-error: true
-
-  # ============================================================================
-  # Job 3: Deploy to Azure Web App
-  # ============================================================================
-  deploy:
-    name: Deploy to Azure
-    runs-on: ubuntu-latest
-    needs: [test, lint]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    environment: production
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-
-      - name: Create deployment package with correct structure
-        run: |
-          # Create a clean deployment directory
-          mkdir -p deploy
-          
-          # Copy backend files to root of deploy (Azure expects app at root)
-          cp -r backend/* deploy/
-          
-          # Copy frontend folder
-          cp -r frontend deploy/
-          
-          # Ensure requirements.txt is at root
-          if [ -f backend/requirements.txt ]; then
-            cp backend/requirements.txt deploy/requirements.txt
-          fi
-          
-          # Ensure gunicorn is in requirements
-          if ! grep -q "gunicorn" deploy/requirements.txt; then
-            echo "gunicorn>=20.1.0" >> deploy/requirements.txt
-          fi
-          
-          # Create startup script
-          cat > deploy/startup.sh << 'EOF'
-          #!/bin/bash
-          cd /home/site/wwwroot
-          gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app --bind 0.0.0.0:8000 --timeout 600
-          EOF
-          
-          chmod +x deploy/startup.sh
-          
-          # Create zip from deploy directory
-          cd deploy
-          zip -r ../deploy.zip .
-          cd ..
-
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: deploy.zip
-
-      - name: Deployment success notification
-        if: success()
-        run: |
-          echo "═══════════════════════════════════════════════════════"
-          echo "✅ DEPLOYMENT SUCCESSFUL!"
-          echo "═══════════════════════════════════════════════════════"
-          echo ""
-          echo "🚀 Your application is live at:"
-          echo "   https://${{ secrets.AZURE_WEBAPP_NAME }}.azurewebsites.net"
-          echo ""
-          echo "📊 Health Check:"
-          echo "   https://${{ secrets.AZURE_WEBAPP_NAME }}.azurewebsites.net/health"
-          echo ""
-          echo "📚 API Documentation:"
-          echo "   https://${{ secrets.AZURE_WEBAPP_NAME }}.azurewebsites.net/docs"
-          echo ""
-          echo "⏰ Note: Container may take 1-2 minutes to fully start"
-          echo "═══════════════════════════════════════════════════════"
-
-      - name: Deployment failure notification
-        if: failure()
-        run: |
-          echo "❌ Deployment failed! Check the logs above for details."
-          exit 1
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: ${{ secrets.AZURE_APP_NAME }}
+        images: ghcr.io/${{ github.repository_owner }}/todo-devops-api:latest
