--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,18 +11,19 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
+
   test:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-    
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
-    
+
     - name: Cache dependencies
       uses: actions/cache@v3
       with:
@@ -30,127 +31,114 @@ jobs:
         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
         restore-keys: |
           ${{ runner.os }}-pip-
-    
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r backend/requirements.txt
-    
+
     - name: Run tests with coverage
       run: |
         cd backend
         pytest tests/ -v --cov=. --cov-report=xml --cov-report=term --cov-fail-under=70
-    
+
     - name: Upload coverage reports
       uses: codecov/codecov-action@v3
       if: always()
       with:
         file: ./backend/coverage.xml
         fail_ci_if_error: false
-    
-    - name: Check coverage threshold
-      run: |
-        cd backend
-        coverage report --fail-under=70
+
 
   lint:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-    
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
-    
+
     - name: Install linting tools
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 black
-    
+        pip install black flake8
+
     - name: Run Black formatter check
+      continue-on-error: true
       run: |
         black --check backend/
-      continue-on-error: true
-    
+
     - name: Run Flake8 linter
+      continue-on-error: true
       run: |
         flake8 backend/ --count --select=E9,F63,F7,F82 --show-source --statistics
-      continue-on-error: true
+
 
   build-and-push:
     needs: [test, lint]
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     permissions:
       contents: read
       packages: write
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-    
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-    
+
     - name: Log in to GitHub Container Registry
       uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-    
-    - name: Extract metadata for Docker
+
+    - name: Extract Docker metadata
       id: meta
       uses: docker/metadata-action@v5
       with:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         tags: |
-          type=ref,event=branch
-          type=sha,prefix={{branch}}-
-          type=raw,value=latest,enable={{is_default_branch}}
-    
-    # 🔧 FIXED DOCKERFILE LOCATION — THIS WAS THE ISSUE
-    - name: Build and push Docker image
+          type=raw,value=latest
+
+    - name: Build and push Docker image (backend Dockerfile)
       uses: docker/build-push-action@v5
       with:
-        context: .
-        file: ./Dockerfile
+        context: ./backend
+        file: ./backend/Dockerfile
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-    
+
     - name: Image digest
       run: echo ${{ steps.meta.outputs.digest }}
 
+
   deploy:
+    name: Deploy container to Azure Web App
     needs: build-and-push
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    # Login to Azure
     - name: Azure Login
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    # Deploy to existing App Service
-    - name: Deploy to Azure Web App
-      uses: azure/webapps-container-deploy@v1
+    - name: Deploy to Azure Web App (existing)
+      uses: azure/webapps-deploy@v2
       with:
-        app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
-        resource-group: ${{ secrets.AZURE_RESOURCE_GROUP }}
-        image: ghcr.io/${{ github.repository }}:latest
+        app-name: todolist-eliasnmeir-2025   # your existing App Service name
+        images: ghcr.io/${{ github.repository }}:latest
 
-    - name: Deployment notification
-      run: |
-        echo "🚀 Deployment completed"
-        echo "App deployed to Azure Web App: ${{ secrets.AZURE_WEBAPP_NAME }}"
+    - name: Deployment completed
+      run: echo "🚀 Deployment finished successfully!"
