--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,9 @@ env:
 
 jobs:
 
+  ###########################################################
+  # 1. TEST JOB
+  ###########################################################
   test:
     runs-on: ubuntu-latest
 
@@ -22,7 +25,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: "3.10"
 
     - name: Cache dependencies
       uses: actions/cache@v3
@@ -49,7 +52,15 @@ jobs:
         file: ./backend/coverage.xml
         fail_ci_if_error: false
 
+    - name: Check coverage threshold
+      run: |
+        cd backend
+        coverage report --fail-under=70
 
+
+  ###########################################################
+  # 2. LINT JOB
+  ###########################################################
   lint:
     runs-on: ubuntu-latest
 
@@ -60,24 +71,25 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: "3.10"
 
     - name: Install linting tools
       run: |
         python -m pip install --upgrade pip
-        pip install black flake8
+        pip install flake8 black
 
     - name: Run Black formatter check
+      run: black --check backend/
       continue-on-error: true
-      run: |
-        black --check backend/
 
     - name: Run Flake8 linter
+      run: flake8 backend/ --count --select=E9,F63,F7,F82 --show-source --statistics
       continue-on-error: true
-      run: |
-        flake8 backend/ --count --select=E9,F63,F7,F82 --show-source --statistics
 
 
+  ###########################################################
+  # 3. BUILD & PUSH DOCKER IMAGE
+  ###########################################################
   build-and-push:
     needs: [test, lint]
     runs-on: ubuntu-latest
@@ -95,23 +107,24 @@ jobs:
     - name: Log in to GitHub Container Registry
       uses: docker/login-action@v3
       with:
-        registry: ${{ env.REGISTRY }}
+        registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Extract Docker metadata
+    - name: Extract metadata for Docker
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        images: ghcr.io/${{ github.repository }}
         tags: |
-          type=raw,value=latest
+          type=ref,event=branch
+          type=raw,value=latest,enable={{is_default_branch}}
 
-    - name: Build and push Docker image (backend Dockerfile)
+    - name: Build and push Docker image
       uses: docker/build-push-action@v5
       with:
-        context: ./backend
-        file: ./backend/Dockerfile
+        context: .                # FIXED
+        file: ./Dockerfile        # FIXED — your Dockerfile is in repo root
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
@@ -120,16 +133,15 @@ jobs:
       run: echo ${{ steps.meta.outputs.digest }}
 
 
+  ###########################################################
+  # 4. DEPLOY TO AZURE APP SERVICE (EXISTING)
+  ###########################################################
   deploy:
-    name: Deploy container to Azure Web App
     needs: build-and-push
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Azure Login
+    - name: Login to Azure
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
@@ -137,7 +149,7 @@ jobs:
     - name: Deploy to Azure Web App (existing)
       uses: azure/webapps-deploy@v2
       with:
-        app-name: todolist-eliasnmeir-2025   # your existing App Service name
+        app-name: todolist-eliasnmeir-2025
         images: ghcr.io/${{ github.repository }}:latest
 
     - name: Deployment completed
