--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,7 @@ on:
 env:
   PYTHON_VERSION: '3.10'
   COVERAGE_THRESHOLD: 70
+  AZURE_WEBAPP_NAME: todolist-eliasnmeir-2025
 
 jobs:
   # ============================================================================
@@ -121,33 +122,66 @@ jobs:
           # Ensure requirements.txt at root
           cp backend/requirements.txt deploy/requirements.txt
           
-          # Create startup script for Azure
-          cat > deploy/startup.sh << 'EOF'
-          #!/bin/bash
-          python -m gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app --bind 0.0.0.0:8000 --timeout 600
-          EOF
-          
-          chmod +x deploy/startup.sh
-          
           # Create zip
           cd deploy
-          zip -r ../deploy.zip .
+          zip -r ../app.zip .
           cd ..
+          
+          ls -lh app.zip
 
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: todolist-eliasnmeir-2025
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: deploy.zip
+      - name: Deploy to Azure Web App using ZIP Deploy
+        env:
+          PUBLISH_PROFILE: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        run: |
+          # Extract credentials from publish profile
+          USERNAME=$(echo "$PUBLISH_PROFILE" | grep -oP 'userName="\K[^"]+' | head -1)
+          PASSWORD=$(echo "$PUBLISH_PROFILE" | grep -oP 'userPWD="\K[^"]+' | head -1)
+          
+          echo "Deploying to: $AZURE_WEBAPP_NAME"
+          
+          # Deploy using Kudu ZIP Deploy API
+          curl -X POST \
+            -u "$USERNAME:$PASSWORD" \
+            --data-binary @app.zip \
+            "https://$AZURE_WEBAPP_NAME.scm.azurewebsites.net/api/zipdeploy"
+          
+          echo "Deployment package uploaded successfully"
+
+      - name: Wait for deployment to complete
+        run: |
+          echo "Waiting 30 seconds for deployment to process..."
+          sleep 30
+
+      - name: Verify deployment
+        run: |
+          echo "Checking health endpoint..."
+          HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" "https://$AZURE_WEBAPP_NAME.azurewebsites.net/health" || echo "000")
+          
+          if [ "$HTTP_CODE" = "200" ]; then
+            echo "✅ Health check passed! App is running."
+          else
+            echo "⚠️  Health check returned: $HTTP_CODE"
+            echo "App may still be starting up. Check https://$AZURE_WEBAPP_NAME.azurewebsites.net"
+          fi
 
       - name: Deployment success
         if: success()
         run: |
+          echo "═══════════════════════════════════════════════════════"
           echo "✅ DEPLOYMENT SUCCESSFUL!"
-          echo "🚀 https://todolist-eliasnmeir-2025.azurewebsites.net"
-          echo "📊 https://todolist-eliasnmeir-2025.azurewebsites.net/health"
-          echo "📚 https://todolist-eliasnmeir-2025.azurewebsites.net/docs"
+          echo "═══════════════════════════════════════════════════════"
+          echo ""
+          echo "🚀 Your application is live at:"
+          echo "   https://$AZURE_WEBAPP_NAME.azurewebsites.net"
+          echo ""
+          echo "📊 Health Check:"
+          echo "   https://$AZURE_WEBAPP_NAME.azurewebsites.net/health"
+          echo ""
+          echo "📚 API Documentation:"
+          echo "   https://$AZURE_WEBAPP_NAME.azurewebsites.net/docs"
+          echo ""
+          echo "⏰ Note: App may take 1-2 minutes to fully start"
+          echo "═══════════════════════════════════════════════════════"
 
       - name: Deployment failure
         if: failure()
