--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Azure Deployment
+name: Azure Container Deployment
 
 on:
   push:
@@ -9,6 +9,8 @@ on:
 env:
   PYTHON_VERSION: '3.10'
   COVERAGE_THRESHOLD: 70
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
   AZURE_WEBAPP_NAME: todolist-eliasnmeir-2025
 
 jobs:
@@ -91,77 +93,113 @@ jobs:
         continue-on-error: true
 
   # ============================================================================
-  # Job 3: Deploy to Azure Web App
+  # Job 3: Build and Push Docker Image
   # ============================================================================
-  deploy:
-    name: Deploy to Azure
+  build-and-push:
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: [test, lint]
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    permissions:
+      contents: read
+      packages: write
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=sha,prefix={{branch}}-
+            type=raw,value=latest,enable={{is_default_branch}}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Image built successfully
+        run: |
+          echo "✅ Docker image built and pushed!"
+          echo "Image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
+
+  # ============================================================================
+  # Job 4: Deploy Container to Azure Web App
+  # ============================================================================
+  deploy:
+    name: Deploy to Azure Web App
+    runs-on: ubuntu-latest
+    needs: build-and-push
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Login to Azure
+        uses: azure/login@v1
         with:
-          python-version: ${{ env.PYTHON_VERSION }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Create deployment package
+      - name: Configure Web App to use Container
         run: |
-          # Create deploy directory
-          mkdir -p deploy
-          
-          # Copy backend files to root of deploy
-          cp -r backend/* deploy/
-          
-          # Copy frontend
-          cp -r frontend deploy/
-          
-          # Ensure requirements.txt at root
-          cp backend/requirements.txt deploy/requirements.txt
-          
-          # Create zip
-          cd deploy
-          zip -r ../app.zip .
-          cd ..
-          
-          ls -lh app.zip
+          az webapp config container set \
+            --name ${{ env.AZURE_WEBAPP_NAME }} \
+            --resource-group BCSAI2025-DEVOPS-STUDENTS-B \
+            --docker-custom-image-name ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest \
+            --docker-registry-server-url https://${{ env.REGISTRY }}
 
-      - name: Deploy to Azure Web App using ZIP Deploy
-        env:
-          PUBLISH_PROFILE: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+      - name: Configure App Settings
         run: |
-          # Extract credentials from publish profile
-          USERNAME=$(echo "$PUBLISH_PROFILE" | grep -oP 'userName="\K[^"]+' | head -1)
-          PASSWORD=$(echo "$PUBLISH_PROFILE" | grep -oP 'userPWD="\K[^"]+' | head -1)
-          
-          echo "Deploying to: $AZURE_WEBAPP_NAME"
-          
-          # Deploy using Kudu ZIP Deploy API
-          curl -X POST \
-            -u "$USERNAME:$PASSWORD" \
-            --data-binary @app.zip \
-            "https://$AZURE_WEBAPP_NAME.scm.azurewebsites.net/api/zipdeploy"
-          
-          echo "Deployment package uploaded successfully"
+          az webapp config appsettings set \
+            --name ${{ env.AZURE_WEBAPP_NAME }} \
+            --resource-group BCSAI2025-DEVOPS-STUDENTS-B \
+            --settings \
+              WEBSITES_PORT=8000 \
+              DOCKER_REGISTRY_SERVER_URL=https://${{ env.REGISTRY }} \
+              WEBSITES_ENABLE_APP_SERVICE_STORAGE=false
 
-      - name: Wait for deployment to complete
+      - name: Restart Web App
         run: |
-          echo "Waiting 30 seconds for deployment to process..."
-          sleep 30
+          az webapp restart \
+            --name ${{ env.AZURE_WEBAPP_NAME }} \
+            --resource-group BCSAI2025-DEVOPS-STUDENTS-B
+
+      - name: Wait for deployment
+        run: |
+          echo "Waiting 60 seconds for container to start..."
+          sleep 60
 
       - name: Verify deployment
         run: |
-          echo "Checking health endpoint..."
-          HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" "https://$AZURE_WEBAPP_NAME.azurewebsites.net/health" || echo "000")
+          echo "Checking application health..."
+          HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" "https://${{ env.AZURE_WEBAPP_NAME }}.azurewebsites.net/health" || echo "000")
           
           if [ "$HTTP_CODE" = "200" ]; then
-            echo "✅ Health check passed! App is running."
+            echo "✅ Health check passed! Application is running."
           else
             echo "⚠️  Health check returned: $HTTP_CODE"
-            echo "App may still be starting up. Check https://$AZURE_WEBAPP_NAME.azurewebsites.net"
+            echo "Application may still be starting. Check https://${{ env.AZURE_WEBAPP_NAME }}.azurewebsites.net"
           fi
 
       - name: Deployment success
@@ -171,20 +209,13 @@ jobs:
           echo "✅ DEPLOYMENT SUCCESSFUL!"
           echo "═══════════════════════════════════════════════════════"
           echo ""
-          echo "🚀 Your application is live at:"
-          echo "   https://$AZURE_WEBAPP_NAME.azurewebsites.net"
+          echo "🚀 Application: https://${{ env.AZURE_WEBAPP_NAME }}.azurewebsites.net"
+          echo "📊 Health: https://${{ env.AZURE_WEBAPP_NAME }}.azurewebsites.net/health"
+          echo "📚 API Docs: https://${{ env.AZURE_WEBAPP_NAME }}.azurewebsites.net/docs"
           echo ""
-          echo "📊 Health Check:"
-          echo "   https://$AZURE_WEBAPP_NAME.azurewebsites.net/health"
-          echo ""
-          echo "📚 API Documentation:"
-          echo "   https://$AZURE_WEBAPP_NAME.azurewebsites.net/docs"
-          echo ""
-          echo "⏰ Note: App may take 1-2 minutes to fully start"
+          echo "🐳 Container: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
           echo "═══════════════════════════════════════════════════════"
 
-      - name: Deployment failure
-        if: failure()
-        run: |
-          echo "❌ Deployment failed! Check logs above."
-          exit 1
+      - name: Logout from Azure
+        if: always()
+        run: az logout
